--- a/PatchManagement/plugin.xml
+++ b/PatchManagement/plugin.xml
@@ -1,30 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-
    <extension
-         point="org.eclipse.ui.actionSets">
-      <actionSet
-            label="Sample Action Set"
-            visible="true"
-            id="PatchManagement.actionSet">
-         <menu
-               label="Sample &amp;Menu"
-               id="sampleMenu">
-            <separator
-                  name="sampleGroup">
-            </separator>
-         </menu>
-         <action
-               label="&amp;Sample Action"
-               icon="icons/sample.gif"
-               class="patchmanagement.actions.SampleAction"
-               tooltip="Hello, Eclipse world"
-               menubarPath="sampleMenu/sampleGroup"
-               toolbarPath="sampleGroup"
-               id="patchmanagement.actions.SampleAction">
-         </action>
-      </actionSet>
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.jdt.ui.PackageExplorer">
+         <command
+               commandId="edu.hm.stromer.patchManagement.backup"
+               label="Backup Solution"
+               style="push">
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:org.eclipse.ui.main.toolbar">
+         <toolbar
+               id="PatchManagement.toolbar1">
+            <command
+                  commandId="edu.hm.stromer.patchManagement.saveFile"
+                  icon="META-INF/icons/sign-check-icon.png"
+                  style="push">
+            </command>
+         </toolbar>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            defaultHandler="patchmanagement.handler.BackupHandler"
+            id="edu.hm.stromer.patchManagement.backup"
+            name="BackupCommand">
+      </command>
+      <command
+            defaultHandler="patchmanagement.handler.SaveHandler"
+            id="edu.hm.stromer.patchManagement.saveFile"
+            name="Save">
+      </command>
    </extension>
 
 </plugin>
