--- a/PatchManagement/plugin.xml
+++ b/PatchManagement/plugin.xml
@@ -14,15 +14,12 @@
       </menuContribution>
       <menuContribution
             allPopups="false"
-            locationURI="toolbar:org.eclipse.ui.main.toolbar">
-         <toolbar
-               id="PatchManagement.toolbar1">
-            <command
-                  commandId="edu.hm.stromer.patchManagement.saveFile"
-                  icon="META-INF/icons/sign-check-icon.png"
-                  style="push">
-            </command>
-         </toolbar>
+            locationURI="popup:org.eclipse.jdt.ui.PackageExplorer">
+         <command
+               commandId="edu.hm.stromer.patchmanagement.createDiff"
+               label="Create Patch"
+               style="push">
+         </command>
       </menuContribution>
    </extension>
    <extension
@@ -33,9 +30,9 @@
             name="BackupCommand">
       </command>
       <command
-            defaultHandler="patchmanagement.handler.SaveHandler"
-            id="edu.hm.stromer.patchManagement.saveFile"
-            name="Save">
+            defaultHandler="patchmanagement.handler.PatchGenerator"
+            id="edu.hm.stromer.patchmanagement.createDiff"
+            name="CreateDiff">
       </command>
    </extension>
 
